--- a/AzureDeployStudy/AzureDeployStudy/Components/Pages/Home.razor
+++ b/AzureDeployStudy/AzureDeployStudy/Components/Pages/Home.razor
@@ -1,7 +1,18 @@
 ﻿@page "/"
 
+@inject IConfiguration Configuration
+
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
-Meu app com deploy automatizado
+<p>Valor Teste do KeyVault: @keyVaultValue</p>
+
+@code {
+    private string? keyVaultValue;
+
+    protected override void OnInitialized()
+    {
+        keyVaultValue = Configuration["CustomerConnectionString"];
+    }
+}
